--- a/src/components/content-block/forms/edit-profile/editProfile.ejs
+++ b/src/components/content-block/forms/edit-profile/editProfile.ejs
@@ -1,4 +1,4 @@
-<div class="author-card edit">
+<div style="display:none;" class="author-card__edit-profile-container" data-edit-profile-card>
     <h3>Никнейм автора</h3>
     <div class="edit-profile-form__group">
         <div class="edit-profile-form__input-item">
@@ -14,10 +14,9 @@
             <input class="edit-profile-form__input" type="text" placeholder="avtor@mail.ru">
         </div>
     </div>
-    <button class="btn">Сохранить настройки</button>
+    <button class="btn" data-edit-profile-save-btn>Сохранить настройки</button>
 </div>
-
-<div class="author-card edit">
+<div style="display:none;" class="author-card__change-password-container" data-change-password-card>
     <h3>Сменить пароль</h3>
     <div class="edit-profile-form__group">
         <div class="edit-profile-form__input-item">
@@ -27,6 +26,5 @@
             <input class="edit-profile-form__input" type="password" placeholder="Повторите пароль">
         </div>
     </div>
-
-    <button class="btn">Сохранить настройки</button>
+    <button class="btn" data-change-password-save-btn>Сохранить настройки</button>
 </div>
