--- a/src/components/content-block/forms/location-search/locationSearch.ejs
+++ b/src/components/content-block/forms/location-search/locationSearch.ejs
@@ -46,16 +46,31 @@
                     <li data-select-id="2" class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">RU</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
+                            <rect x="0.25" y="0.25" width="27.5" height="19.5" rx="1.75" fill="white" stroke="#F5F5F5" stroke-width="0.5"/>
+                            <mask id="mask0_902:6118" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
+                                <rect x="0.25" y="0.25" width="27.5" height="19.5" rx="1.75" fill="white" stroke="white" stroke-width="0.5"/>
                             </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
+                            <g mask="url(#mask0_902:6118)">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66666H0V13.3333Z" fill="#0C47B7"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#E53B35"/>
                             </g>
                         </svg>
+                    </li>
+                    <li data-select-id="3" class="select__item-js location-search__country-item">
+                        <span class="location-search__country-prefix">KZ</span>
+                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="28" height="20" rx="2" fill="white"/>
+                            <mask id="mask0_904:6445" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
+                                <rect width="28" height="20" rx="2" fill="white"/>
+                            </mask>
+                            <g mask="url(#mask0_904:6445)">
+                                <rect width="28" height="20" fill="#30C6E0"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M14 14C16.2091 14 18 12.2091 18 10C18 7.79086 16.2091 6 14 6C11.7909 6 10 7.79086 10 10C10 12.2091 11.7909 14 14 14Z" fill="#FFCD4B"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.368 17.1495L13.9998 14.7136L15.6317 17.1495L16.045 14.2468L18.5721 15.7334L17.6851 12.9389L20.6069 13.1818L18.5953 11.0489L21.3332 10L18.5953 8.95112L20.6069 6.81818L17.6851 7.06111L18.5721 4.26657L16.045 5.75318L15.6317 2.85052L13.9998 5.28638L12.368 2.85052L11.9547 5.75318L9.42758 4.26657L10.3146 7.06111L7.39273 6.81818L9.4044 8.95112L6.6665 10L9.4044 11.0489L7.39273 13.1818L10.3146 12.9389L9.42758 15.7334L11.9547 14.2468L12.368 17.1495ZM18.6665 10C18.6665 12.5773 16.5772 14.6667 13.9998 14.6667C11.4225 14.6667 9.33317 12.5773 9.33317 10C9.33317 7.42267 11.4225 5.33333 13.9998 5.33333C16.5772 5.33333 18.6665 7.42267 18.6665 10Z" fill="#FFCD4B"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M1.3335 1.66668C1.3335 1.48258 1.48273 1.33334 1.66683 1.33334H2.3335C2.51759 1.33334 2.66683 1.48258 2.66683 1.66668V2.33334C2.66683 2.51744 2.51759 2.66668 2.3335 2.66668H1.66683C1.48273 2.66668 1.3335 2.51744 1.3335 2.33334V1.66668ZM1.3335 4.33334C1.3335 4.14925 1.48273 4.00001 1.66683 4.00001H2.3335C2.51759 4.00001 2.66683 4.14925 2.66683 4.33334V5.00001C2.66683 5.1841 2.51759 5.33334 2.3335 5.33334H1.66683C1.48273 5.33334 1.3335 5.18411 1.3335 5.00001V4.33334ZM1.66683 6.66668C1.48273 6.66668 1.3335 6.81592 1.3335 7.00001V7.66668C1.3335 7.85077 1.48273 8.00001 1.66683 8.00001H2.3335C2.51759 8.00001 2.66683 7.85077 2.66683 7.66668V7.00001C2.66683 6.81592 2.51759 6.66668 2.3335 6.66668H1.66683ZM1.3335 9.66668C1.3335 9.48258 1.48273 9.33334 1.66683 9.33334H2.3335C2.51759 9.33334 2.66683 9.48258 2.66683 9.66668V10.3333C2.66683 10.5174 2.51759 10.6667 2.3335 10.6667H1.66683C1.48273 10.6667 1.3335 10.5174 1.3335 10.3333V9.66668ZM1.66683 12C1.48273 12 1.3335 12.1492 1.3335 12.3333V13C1.3335 13.1841 1.48273 13.3333 1.66683 13.3333H2.3335C2.51759 13.3333 2.66683 13.1841 2.66683 13V12.3333C2.66683 12.1492 2.51759 12 2.3335 12H1.66683ZM1.3335 15C1.3335 14.8159 1.48273 14.6667 1.66683 14.6667H2.3335C2.51759 14.6667 2.66683 14.8159 2.66683 15V15.6667C2.66683 15.8508 2.51759 16 2.3335 16H1.66683C1.48273 16 1.3335 15.8508 1.3335 15.6667V15ZM1.66683 17.3333C1.48273 17.3333 1.3335 17.4826 1.3335 17.6667V18.3333C1.3335 18.5174 1.48273 18.6667 1.66683 18.6667H2.3335C2.51759 18.6667 2.66683 18.5174 2.66683 18.3333V17.6667C2.66683 17.4826 2.51759 17.3333 2.3335 17.3333H1.66683ZM2.66683 16.3333C2.66683 16.1492 2.81607 16 3.00016 16H3.66683C3.85092 16 4.00016 16.1492 4.00016 16.3333V17C4.00016 17.1841 3.85092 17.3333 3.66683 17.3333H3.00016C2.81607 17.3333 2.66683 17.1841 2.66683 17V16.3333ZM3.00016 13.3333C2.81607 13.3333 2.66683 13.4826 2.66683 13.6667V14.3333C2.66683 14.5174 2.81607 14.6667 3.00016 14.6667H3.66683C3.85092 14.6667 4.00016 14.5174 4.00016 14.3333V13.6667C4.00016 13.4826 3.85092 13.3333 3.66683 13.3333H3.00016ZM2.66683 11C2.66683 10.8159 2.81607 10.6667 3.00016 10.6667H3.66683C3.85092 10.6667 4.00016 10.8159 4.00016 11V11.6667C4.00016 11.8508 3.85092 12 3.66683 12H3.00016C2.81607 12 2.66683 11.8508 2.66683 11.6667V11ZM3.00016 8.00001C2.81607 8.00001 2.66683 8.14925 2.66683 8.33334V9.00001C2.66683 9.1841 2.81607 9.33334 3.00016 9.33334H3.66683C3.85092 9.33334 4.00016 9.1841 4.00016 9.00001V8.33334C4.00016 8.14925 3.85092 8.00001 3.66683 8.00001H3.00016ZM2.66683 5.66668C2.66683 5.48258 2.81607 5.33334 3.00016 5.33334H3.66683C3.85092 5.33334 4.00016 5.48258 4.00016 5.66668V6.33334C4.00016 6.51744 3.85092 6.66668 3.66683 6.66668H3.00016C2.81607 6.66668 2.66683 6.51744 2.66683 6.33334V5.66668ZM3.00016 2.66668C2.81607 2.66668 2.66683 2.81592 2.66683 3.00001V3.66668C2.66683 3.85077 2.81607 4.00001 3.00016 4.00001H3.66683C3.85092 4.00001 4.00016 3.85077 4.00016 3.66668V3.00001C4.00016 2.81592 3.85092 2.66668 3.66683 2.66668H3.00016Z" fill="#FFCD4B"/>
+                            </g>
+                        </svg>
+
                     </li>
                 </ul>
             </div>
