--- a/src/components/content-block/forms/location-search/locationSearch.scss
+++ b/src/components/content-block/forms/location-search/locationSearch.scss
@@ -236,9 +236,11 @@
 }
 
 .location-search__country-prefix {
-  margin-right: 8px;
+  margin-right: 6px;
   color: #777C86;
   font-size: 14px;
+  width: 22px;
+  text-align: center;
 }
 
 .location-search__country-logo {
