--- a/src/components/modal/modal-category-menu/modal-category-menu.scss
+++ b/src/components/modal/modal-category-menu/modal-category-menu.scss
@@ -27,6 +27,7 @@
 .modal-category-menu__items {
   overflow-y: auto;
   max-height: 171px;
+  padding-right: 10px;
 }
 
 .modal-category-menu__item {
