--- a/src/components/dashboard/author-card/authorСard.ejs
+++ b/src/components/dashboard/author-card/authorСard.ejs
@@ -14,7 +14,7 @@
                 <span class="author-card__logo__switch-btn">Сменить</span>
             </div>
         </div>
-        <div class="author-card__profile-container">
+        <div class="author-card__profile-container" data-dashboard-main-card>
             <h3 class="author-card__profile-name">Никнейм автора</h3>
                 <ul class="author-card__profile-data">
                     <li class="author-card__data-item">
@@ -31,42 +31,11 @@
                     </li>
                 </ul>
             <div class="author-card__list-btn">
-                <a id="article-card__btn-switch-password" href="#">Сменить пароль</a>
-                <a id="article-card__btn-edit-profile" href="#">Редактировать профиль</a>
+                <a id="article-card__btn-switch-password" data-change-password-btn href="#">Сменить пароль</a>
+                <a id="article-card__btn-edit-profile" data-edit-profile-btn href="#">Редактировать профиль</a>
             </div>
         </div>
-    </div>
-</div>
-<div  style="display: none" class="author-card">
-    <h1 class="author-card__title">Кабинет автора</h1>
-    <div class="author-card__profile">
-        <div class="author-card__logo-container">
-            <div class="author-card__logo">
-                <img class="author-card__logo-img"
-                     src=""
-                     alt="">
-                <span class="author-card__logo__switch-btn">Сменить</span>
-            </div>
-        </div>
-        <div class="author-card edit">
-            <h3>Никнейм автора</h3>
-            <div class="edit-profile-form__group">
-                <div class="edit-profile-form__input-item">
-                    <input class="edit-profile-form__input" type="text" placeholder="Никнейм автора">
-                </div>
-                <div class="edit-profile-form__input-item">
-                    <input class="edit-profile-form__input" type="text" placeholder="Россия">
-                </div>
-                <div class="edit-profile-form__input-item">
-                    <input class="edit-profile-form__input" type="text" placeholder="Тольятти">
-                </div>
-                <div class="edit-profile-form__input-item">
-                    <input class="edit-profile-form__input" type="text" placeholder="avtor@mail.ru">
-                </div>
-            </div>
-
-            <button class="btn">Сохранить настройки</button>
-        </div>
+        <%- include('../../content-block/forms/edit-profile/editProfile'); -%>
     </div>
 </div>
 
