--- a/src/components/menu/side-menu/side-menu.scss
+++ b/src/components/menu/side-menu/side-menu.scss
@@ -179,6 +179,7 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
+
 .side-menu-mobile__bg-shadow {
   width: 100%;
   height: 100%;
@@ -191,6 +192,7 @@
   background: rgba(51, 51, 51, 0.5);
   z-index: 9999;
 }
+
 .side-menu-mobile .side-menu__inner-top .inner-top__link {
   height: 46px;
   border-radius: 25px;
@@ -284,7 +286,7 @@
 //side-menu mobile footer
 .side-menu-mobile__footer {
   padding: 30px;
-  max-height: 350px;
+  max-height: 420px;
   height: 100%;
   background-color: #F2F2F2;
 }
@@ -303,20 +305,32 @@
   margin-bottom: 16px;
 }
 
-.side-menu-footer__link-in-shop {
+.side-menu-footer__link-logIn {
+  margin-top: 20px;
+}
+
+.side-menu-footer__link-logIn svg {
+  margin-right: 6px;
+}
+
+.side-menu-footer__link-in-shop,
+.side-menu-footer__link-logIn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
-  text-align: center;
   text-transform: uppercase;
   color: #777C86;
   background: #E0E0E0;
   border-radius: 19px;
-  padding: 12px 50px;
+  padding: 12px 30px;
   width: 241px;
 }
 
-.side-menu-footer__link-in-shop:hover {
+.side-menu-footer__link-in-shop:hover,
+.side-menu-footer__link-logIn:hover {
   background-color: #003C5A;
   color: #ffffff;
   cursor: pointer;
@@ -346,7 +360,7 @@
     width: 100%;
   }
   .side-menu-mobile__footer .social-item:not(:last-child) {
-    margin-right: 25px!important;
+    margin-right: 25px !important;
   }
   .side-menu-mobile__footer .footer__social {
     margin-bottom: 30px;
@@ -357,8 +371,8 @@
   .side-menu-mobile__header .side-menu__inner-top {
     margin-top: 35px;
   }
-  .side-menu-footer__link-in-shop {
+  .side-menu-footer__link-in-shop,
+  .side-menu-footer__link-logIn {
     max-width: 203px;
-    padding: 5px 50px;
   }
 }
